--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,17 +1,13 @@
-name: Push to DockerHub Registry Pipeline
+name: Deploy to DockerHub Registry Pipeline
 
 on:
   push:
     branches:
-      - main
+      - main  # ή το branch που θέλεις να κάνει deploy
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
-    env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
     steps:
       - name: Checkout code
@@ -20,28 +16,29 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: '22' # ή όποια έκδοση χρησιμοποιείς
+
 
       - name: Install frontend dependencies
         run: |
-          cd react-app
+          cd frontend
           npm ci
-  
       - name: Build frontend
         run: |
-          cd react-app
+          cd frontend
           npm run build
 
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '21'
+          java-version: '21' 
 
       - name: Build backend
         run: |
-          cd springboot-app
+          cd backend
           mvn clean package -DskipTests
+
 
       - name: Docker login
         uses: docker/login-action@v2
@@ -51,13 +48,6 @@ jobs:
 
       - name: Docker Compose Build & Push
         run: |
-          COMMIT_SHA=$(echo $GITHUB_SHA | cut -c1-7)
-          # Build all images
           docker-compose -f docker-compose.yml build
-          # Tag images με commit SHA
-          docker tag ${DOCKERHUB_USERNAME}/frontend:latest ${DOCKERHUB_USERNAME}/frontend:$COMMIT_SHA
-          docker tag ${DOCKERHUB_USERNAME}/backend:latest ${DOCKERHUB_USERNAME}/backend:$COMMIT_SHA
-          # Push all images
           docker-compose -f docker-compose.yml push
-          docker push ${DOCKERHUB_USERNAME}/frontend:$COMMIT_SHA
-          docker push ${DOCKERHUB_USERNAME}/backend:$COMMIT_SHA
+
