--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,11 +21,11 @@ jobs:
 
       - name: Install frontend dependencies
         run: |
-          cd frontend
+          cd react-app
           npm ci
       - name: Build frontend
         run: |
-          cd frontend
+          cd react-app
           npm run build
 
       - name: Setup Java
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build backend
         run: |
-          cd backend
+          cd springboot-app
           mvn clean package -DskipTests
 
 
