--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Docker login
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${ secrets.DOCKERHUB_USERNAME }
+          password: ${ secrets.DOCKERHUB_TOKEN }
 
       - name: Docker Compose Build & Push
         run: |
