--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,5 +45,6 @@ jobs:
           docker compose -f docker-compose.yml push
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        env:
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }} 
 
