--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Docker Compose Build & Push
         run: |
-          docker compose -f docker-compose.yml build ${{secrets.DOCKERHUB_USERNAME}}/full-stack-simple-app:latest
-          docker compose -f docker-compose.yml push ${{secrets.DOCKERHUB_USERNAME}}/full-stack-simple-app:latest
+          docker compose -f docker-compose.yml build "${{secrets.DOCKERHUB_USERNAME}}"/full-stack-simple-app:latest
+          docker compose -f docker-compose.yml push "${{secrets.DOCKERHUB_USERNAME}}"/full-stack-simple-app:latest
         
 
