--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,9 +42,11 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Docker Compose Build & Push
+      - name: Build and push Docker image
         run: |
-          docker compose -f docker-compose.yml build "${{secrets.DOCKERHUB_USERNAME}}"/full-stack-simple-app:latest
-          docker compose -f docker-compose.yml push "${{secrets.DOCKERHUB_USERNAME}}"/full-stack-simple-app:latest
+          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/full-stack-simple-app:latest"
+          docker compose -f docker-compose.yml build
+          docker tag full-stack-simple-app:latest $IMAGE_NAME
+          docker push $IMAGE_NAME
         
 
