--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,5 +48,8 @@ jobs:
           docker compose -f docker-compose.yml build
           docker tag full-stack-simple-app:latest $IMAGE_NAME
           docker push $IMAGE_NAME
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }} 
         
 
