--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Deploy to DockerHub Registry Pipeline
 on:
   push:
     branches:
-      - main  # ή το branch που θέλεις να κάνει deploy
+      - main  
 
 jobs:
   build-and-deploy:
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22' # ή όποια έκδοση χρησιμοποιείς
+          node-version: '22' 
 
 
       - name: Install frontend dependencies
@@ -39,17 +39,19 @@ jobs:
           cd springboot-app
           mvn clean package -DskipTests
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }} 
 
-      - name: Build and push Docker image
-        run: |
-          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/full-stack-simple-app:latest"
-          docker compose -f docker-compose.yml build
-          docker tag full-stack-simple-app:latest $IMAGE_NAME
-          docker push $IMAGE_NAME
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }} 
-        
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fullstack-app:latest
+          file: ./Dockerfile  
+          
+          
 
