--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,54 +1,76 @@
-name: Deploy to DockerHub Registry Pipeline
+name: CI/CD to DockerHub
 
 on:
   push:
-    branches:
-      - main  
+    branches: [ "main" ]
 
 jobs:
-  build-and-deploy:
+  detect-changes:
     runs-on: ubuntu-latest
-
+    outputs:
+      frontend: ${{ steps.filter.outputs.frontend }}
+      backend: ${{ steps.filter.outputs.backend }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: dorny/paths-filter@v3
+        id: filter
         with:
-          node-version: '22' 
+          filters: |
+            frontend:
+              - 'react-app/**'
+            backend:
+              - 'springboot-app/**'
 
-
-      - name: Install frontend dependencies
-        run: |
+  build-frontend:
+    needs: detect-changes
+    if: ${{ needs.detect-changes.outputs.frontend == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '22'
+          cache: 'npm'
+      - run: |
           cd react-app
           npm ci
-      - name: Build frontend
-        run: |
-          cd react-app
           npm run build
-
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '21' 
-
-      - name: Build backend
-        run: |
-          cd springboot-app
-          mvn clean package -DskipTests
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }} 
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: docker/build-push-action@v6
+        with:
+          context: ./react-app
+          file: ./react-app/Dockerfile
+          push: true
+          tags: |
+            myuser/react-app:latest
+            myuser/react-app:${{ github.sha }}
 
-      - name: Build and push
-        run : |
-          docker compose build
-          docker compose push
-
-          
-
+  build-backend:
+    needs: detect-changes
+    if: ${{ needs.detect-changes.outputs.backend == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+          cache: 'maven'
+      - run: |
+          cd springboot-app
+          mvn clean package -DskipTests
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: docker/build-push-action@v6
+        with:
+          context: ./springboot-app
+          file: ./springboot-app/Dockerfile
+          push: true
+          tags: |
+            myuser/springboot-app:latest
+            myuser/springboot-app:${{ github.sha }}
