--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,11 +5,13 @@ on:
     branches: [ "main" ]
 
 jobs:
+
   detect-changes:
     runs-on: ubuntu-latest
     outputs:
       frontend: ${{ steps.filter.outputs.frontend }}
       backend: ${{ steps.filter.outputs.backend }}
+
     steps:
       - uses: actions/checkout@v3
       - uses: dorny/paths-filter@v3
@@ -26,35 +28,50 @@ jobs:
     if: ${{ needs.detect-changes.outputs.frontend == 'true' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: '22'
-          cache: 'npm'
-      - run: |
+
+      - name: Install frontend dependencies
+        run: |
           cd react-app
           npm ci
+
+      - name: Build frontend
+        run: |
+          cd react-app
           npm run build
-      - uses: docker/login-action@v3
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: docker/build-push-action@v6
+
+      - name: Build and push frontend image
+        uses: docker/build-push-action@v6
         with:
-          context: ./react-app
-          file: ./react-app/Dockerfile
-          push: true
-          tags: |
-            myuser/react-app:latest
-            myuser/react-app:${{ github.sha }}
+        context: ./react-app
+        file: ./react-app/Dockerfile
+        push: true
+        tags: |
+          christaras100/react-app:latest
+          christaras100/react-app:${{ github.sha }}
 
   build-backend:
     needs: detect-changes
     if: ${{ needs.detect-changes.outputs.backend == 'true' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+      - name: Set up JDK 21 and cache Maven packages
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
