--- a/react-app/nginx.conf
+++ b/react-app/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name christos-agoratzis-app.eu;
 
     root /usr/share/nginx/html;
     index index.html;
