--- a/springboot-app/src/main/resources/application.properties
+++ b/springboot-app/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.use-forward-headers=true
+logging.level.org.springframework.web=DEBUG
