--- a/react-app/nginx.conf
+++ b/react-app/nginx.conf
@@ -16,4 +16,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;     
     }
+    
+    access_log /dev/stdout combined;
+    error_log /dev/stderr debug;
 }
