--- a/springboot-app/src/main/resources/application.properties
+++ b/springboot-app/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+logging.level.root=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+logging.level.org.springframework.security=TRACE
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.use-forward-headers=true
-logging.level.org.springframework.security=TRACE
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
