--- a/springboot-app/src/main/resources/application.properties
+++ b/springboot-app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.root=DEBUG
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.web=DEBUG
+
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
