--- a/react-app/nginx.conf
+++ b/react-app/nginx.conf
@@ -9,13 +9,7 @@ server {
         try_files $uri /index.html;
     }
     location /api/ {
-        proxy_pass http://backend:8080/api/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;   
-        proxy_set_header Origin $http_origin;  
+        proxy_pass http://backend:8080;
     }
 
     access_log /dev/stdout combined;
